--- a/hello-world-gulp/package.json
+++ b/hello-world-gulp/package.json
@@ -16,6 +16,8 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1"
   }
 }
