--- a/day-11/vanilla-rest-api-express/package.json
+++ b/day-11/vanilla-rest-api-express/package.json
@@ -8,13 +8,18 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "DEBUG='note*' node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "debug": "^2.4.5",
+    "express": "^4.14.0",
+    "http-errors": "^1.5.1",
+    "morgan": "^1.7.0",
     "node-uuid": "^1.4.7"
   },
   "devDependencies": {
