--- a/day-15/oauth-demo/package.json
+++ b/day-15/oauth-demo/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "DEBUG='cfgram*' mocha",
-    "start": "DEBUG='cfgram*' gulp"
+    "start": "DEBUG='cfgram*' node server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,16 +23,19 @@
     "superagent": "^3.3.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.7.21",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "debug": "^2.6.0",
+    "del": "^2.2.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "http-errors": "^1.5.1",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.5",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "multer": "^1.2.1"
   }
 }
