--- a/day-23/ng-adventure/package.json
+++ b/day-23/ng-adventure/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "angular-controller-demo",
+  "name": "day-23",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/webpack/bin/webpack.js",
     "watch": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "lint": "eslint app/*.js",
     "test-watch": "./node_modules/karma/bin/karma start",
-    "test": "./node_modules/karma/bin/karma start --single-run",
-    "lint": "eslint ./app/*.js"
+    "test": "./node_modules/karma/bin/karma start --single-run"
   },
   "keywords": [],
   "author": "",
@@ -18,24 +18,21 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
-    "cowsay-browser": "^1.1.8",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
+    "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.6.1",
     "eslint": "^3.13.1",
-    "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack": "^2.0.1",
     "webpack-dev-server": "^1.16.2"
   }
 }
