--- a/day-28/cfgram-auth/package.json
+++ b/day-28/cfgram-auth/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/webpack/bin/webpack.js",
+    "build-watch": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "test": "./node_modules/karma/bin/karma start --single-run",
+    "test-watch": "./node_modules/karma/bin/karma start",
+    "lint": "eslint **/*.js"
   },
   "keywords": [],
   "author": "",
@@ -34,5 +38,16 @@
     "ui-router": "^1.0.0-alpha.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.6.1",
+    "eslint": "^3.14.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^2.0.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
